--- a/kontakt.html
+++ b/kontakt.html
@@ -18,7 +18,7 @@
 
     <div class="kontakt" id="contact">
         <h1>Kontakta oss</h1>
-        <form action="submit">
+        <form>
             <label for="name">Namn:</label>
             <input id="name" type="text">
 
@@ -40,13 +40,12 @@
                 <option value="meat">Kött</option>
             </select>  
             
-            <input type="submit" value="Skicka" name="" id="">
-            
-            </form>
+            <input type="submit" value="Skicka" name="" id="">  
+        </form>
     </div>
 
     <footer></footer>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 </html>
