--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
         </a>
       </footer>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
