--- a/index.html
+++ b/index.html
@@ -32,12 +32,18 @@
       <main>
         <img src="./src/back.png" alt="some resturant imagery">
         <h1>RIMAS CATERING</h1>
+        <p class="ptag">
+          Välkommen till RIMAS Catering - där passion för mat och service går hand i hand. Med en stark förankring i Mellanösterns kök erbjuder vi en autentisk matupplevelse som passar alla evenemang, från födelsedagar och bröllop till företagsluncher och konferenser. Vi kombinerar färska, högkvalitativa ingredienser med innovativa recept för att skapa oförglömliga måltider. Varje evenemang är unikt, och vi strävar efter att skräddarsy varje meny enligt dina önskemål. Upptäck skillnaden med RIMAS Catering idag.
+        </p>
         
         <section>
-          <!-- <h1>information</h1> -->
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-           </p>
-           
+          <h2>Varför Välja RIMAS Catering?</h2>
+          <p>
+            Vid RIMAS Catering strävar vi efter perfektion i varje tallrik. Med en djup rot i Mellanösterns rika kulinariska tradition är vi stolta över att kunna presentera en meny som reflekterar både autenticitet och innovation. Oavsett om det är en intim sammankomst med vänner eller en storslagen företagskonferens, arbetar vi tätt med dig för att förstå och uppfylla dina exakta behov.
+          </p>
+          <p>
+            Varje evenemang förtjänar en unik touch. Och hos oss handlar det inte bara om maten - det handlar om att skapa oförglömliga upplevelser. Vår passion för detaljer, från val av färska ingredienser till presentationen på tallriken, garanterar att varje måltid blir ett konstverk i sig. Låt oss göra ditt nästa evenemang till en kulinarisk triumf.
+          </p>  
         </section>
 
         <button id="evenemang">Nyheter / Evenemang</button>
