testing new stuff

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section>
           <h2>Varför Välja RIMAS Catering?</h2>
           <p>
-            Vid RIMAS Catering strävar vi efter perfektion i varje tallrik. Med en djup rot i Mellanösterns rika kulinariska tradition är vi stolta över att kunna presentera en meny som reflekterar både autenticitet och innovation. Oavsett om det är en intim sammankomst med vänner eller en storslagen företagskonferens, arbetar vi tätt med dig för att förstå och uppfylla dina exakta behov.
+            Vid RIMAS Catering strävar vi efter perfektion i varje tallrik. Med en djup rot i Mellanösterns rika kulinariska tradition är vi stolta över att kunna presentera en meny som reflekterar både autenticitet och innovation.
           </p>
           <p>
             Varje evenemang förtjänar en unik touch. Och hos oss handlar det inte bara om maten - det handlar om att skapa oförglömliga upplevelser. Vår passion för detaljer, från val av färska ingredienser till presentationen på tallriken, garanterar att varje måltid blir ett konstverk i sig. Låt oss göra ditt nästa evenemang till en kulinarisk triumf.
