--- a/kontakt.html
+++ b/kontakt.html
@@ -47,5 +47,7 @@
     <footer></footer>
 
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="./main.js"></script>
+    <script src="./smtp.js"></script>
 </body>
 </html>
