--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
       </header>
 
       <main>
-        <img src="./src/back.png" alt="some resturant imagery">
+        <img src="./src/splash.jpg" alt="some resturant imagery">
         <h1>RIMAS CATERING</h1>
         <p class="ptag">
           Välkommen till RIMAS Catering - där passion för mat och service går hand i hand. Med en stark förankring i Mellanösterns kök erbjuder vi en autentisk matupplevelse som passar alla evenemang, från födelsedagar och bröllop till företagsluncher och konferenser. Vi kombinerar färska, högkvalitativa ingredienser med innovativa recept för att skapa oförglömliga måltider. Varje evenemang är unikt, och vi strävar efter att skräddarsy varje meny enligt dina önskemål. Upptäck skillnaden med RIMAS Catering idag.
+        </p>
+        <p class="ptag-short hidden">
+          Välkommen till RIMAS Catering - där passion för mat och service går hand i hand. Med en stark förankring i Mellanösterns kök erbjuder vi en autentisk matupplevelse som passar alla evenemang.
         </p>
         
         <section>
@@ -43,7 +46,18 @@
           </p>
           <p>
             Varje evenemang förtjänar en unik touch. Och hos oss handlar det inte bara om maten - det handlar om att skapa oförglömliga upplevelser. Vår passion för detaljer, från val av färska ingredienser till presentationen på tallriken, garanterar att varje måltid blir ett konstverk i sig. Låt oss göra ditt nästa evenemang till en kulinarisk triumf.
-          </p>  
+          </p>
+
+          <p class="p-short">
+            Vid RIMAS Catering strävar vi efter perfektion i varje tallrik. Med en djup rot i Mellanösterns rika kulinariska tradition är vi stolta över vårt service.
+          </p>
+          <p class="p-short">
+            Varje evenemang förtjänar en unik touch. Och hos oss handlar det inte bara om maten - det handlar om att skapa oförglömliga upplevelser. Vår passion för detaljer, från val av färska ingredienser till presentationen på tallriken, garanterar att varje måltid blir ett konstverk i sig.
+          </p>
+
+          <!-- <span class="short-content">Short version of the text for mobile...</span>
+          <span class="full-content">Full version of the text...</span>
+          <button class="read-more">Read More</button> -->
         </section>
 
         <button id="evenemang">Nyheter / Evenemang</button>
