--- a/event.html
+++ b/event.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="kort" src="./src/plate.jpg" alt="">
+        <img class="kort" src="./src/event1.jpg" alt="">
         <div class="text">
             <h4>Bröllop</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A in repudiandae perspiciatis.</p>
@@ -15,7 +15,7 @@
     </div>
 
     <div class="container">
-        <img class="kort" src="./src/3426526.jpg" alt="">
+        <img class="kort" src="./src/event2.jpg" alt="">
         <div class="text">
             <h4>bank</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A in repudiandae perspiciatis.</p>
