--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="./src/logo2.png" alt="">
+        <!-- <img src="./src/logo2.png" alt=""> -->
         <a href="./index.html" class="fas fa-home"></a>
     </header>
 
@@ -25,10 +25,10 @@
             <label for="Email">Email:</label>
             <input id="email" type="email">
 
-            <label for="Phone">mobil:</label>
+            <label for="Phone">Mobil:</label>
             <input id="phone" type="tel">
 
-            <label for="people">Antal gäster::</label>
+            <label for="people">Antal gäster:</label>
             <input id="people" type="number">
 
             <label for="event">Event:</label>
@@ -36,8 +36,8 @@
 
             <label for="diet">Preferenser:</label>
             <select id="diet" name="diet" class="form__field" required>
-                <option value="vegetarian">Vegetariskt</option>
-                <option value="meat">Kött</option>
+                <option value="vegetarian">Vegetariskt/Vegan</option>
+                <option value="meat">karnivor</option>
             </select>  
             
             <input type="submit" value="Skicka" name="" id="">  
