--- a/kontakt.html
+++ b/kontakt.html
@@ -44,7 +44,9 @@
         </form>
     </div>
 
-    <footer></footer>
+    <footer>
+        
+    </footer>
 
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="./main.js"></script>
