--- a/evenemang.html
+++ b/evenemang.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evenemang</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/Evenemang.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Event</title>
 </head>
 <body>
+
+    <header>
+        <a href="./index.html" class="fas fa-home"></a>
+    </header>
+
     <div class="container">
         <img class="kort" src="./src/event1.jpg" alt="">
         <div class="text">
@@ -25,6 +35,11 @@
             </p>
         </div>
     </div>
+
+    <footer>
+        <img src="./src/logo2.png" alt="Our companys logo">
+        <p>© 2023 Rimas Catering</p>
+    </footer>
 
     <script src="./main.js"></script>
 </body>
