--- a/evenemang.html
+++ b/evenemang.html
@@ -16,6 +16,10 @@
         <a href="./index.html" class="fas fa-home"></a>
     </header>
 
+    <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
+    <h1>Evenemang & Nyheter</h1>
+    <p class="head">Här kan du se vad vi håller på med!</p>
+
     <div class="container">
         <img class="kort" src="./src/event1.jpg" alt="">
         <div class="text">
