--- a/kontakt.html
+++ b/kontakt.html
@@ -16,6 +16,10 @@
         <a href="./index.html" class="fas fa-home"></a>
     </header>
 
+    <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
+    <h1 class="kontaktaoss">Kontakta Oss</h1>
+    <!-- <p class="head">Slå oss ett mejl!</p> -->
+
     <div class="kontakt" id="contact">
         <h1>Kontakta oss</h1>
         <form>
