--- a/omoss.html
+++ b/omoss.html
@@ -13,15 +13,20 @@
 <body>
     <header>
         <a href="./index.html" class="fas fa-home"></a>
+        
     </header>
+
+    <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
+    <h1>Om Oss</h1>
+    <p class="head">Välkommen till Rimas catering!</p>
+
 
     <main>
         <div class="box">
-            <p class="head">Välkommen till Rimas catering!</p>
 
             <div class="image-container">
                 <img class="imges" src="./src/shabab1.jpg" alt="">
-                <img class="imges" src="./src/shabab2.jpg" alt="">
+                <img class="imges" src="./src/ziko.jpg" alt="">
             </div>
 
 
