--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <button class="read-more">Read More</button> -->
         </section>
 
-        <button id="evenemang">Nyheter / Evenemang</button>
+        <button>Nyheter / Evenemang</button>
 
         <div id="content">
           <!-- <img src="./src/plate.jpg" alt="">
