--- a/kontakt.html
+++ b/kontakt.html
@@ -26,7 +26,7 @@
             <label for="name">Namn:</label>
             <input id="name" type="text">
 
-            <label for="Email">Email:</label>
+            <label for="Email">E-post:</label>
             <input id="email" type="email">
 
             <label for="Phone">Mobil:</label>
