--- a/omoss.html
+++ b/omoss.html
@@ -18,15 +18,15 @@
 
     <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
     <h1>Om Oss</h1>
-    <p class="head">Välkommen till Rimas catering!</p>
+    <p class="head">Välkommen till Rimas Catering!</p>
 
 
     <main>
         <div class="box">
 
             <div class="image-container">
-                <img class="imges" src="./src/shabab1.jpg" alt="">
                 <img class="imges" src="./src/ziko.jpg" alt="">
+                <img class="imges" src="./src/shabab1.jpg" alt="">
             </div>
 
 
