--- a/evenemang.html
+++ b/evenemang.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/Evenemang.css">
+    <link rel="stylesheet" href="./css/into.css">
+    <link rel="stylesheet" href="./css/mainEvent.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Event</title>
 </head>
@@ -16,29 +16,33 @@
         <a href="./index.html" class="fas fa-home"></a>
     </header>
 
-    <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
-    <h1>Evenemang & Nyheter</h1>
-    <p class="head">Här kan du se vad vi håller på med!</p>
+    <section class="intro">
+        <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
+        <h1>Evenemang</h1>
+        <p class="head">Här kan du se vad vi håller på med!</p>
+    </section>
 
     <div class="container">
         <img class="kort" src="./src/event1.jpg" alt="">
         <div class="text">
             <h4>Bröllop</h4>
-            <p>
+            <p class="textp">
                 Vår magiska bröllopsdag blev en oförglömlig stund, fylld av skratt, kärlek och eviga minnen.
             </p>
         </div>
     </div>
 
-    <div class="container">
+     <div class="container">
         <img class="kort" src="./src/event2.jpg" alt="">
-        <div class="text">
+         <div class="text">
             <h4>bank</h4>
-            <p>
+            <p class="textp">
                 Vid vårt bank-event bjöd vi på en festmåltid som fick alla att känna sig som en del av vår stora familj.
             </p>
         </div>
     </div>
+
+    <div class="spacer"></div>
 
     <footer>
         <img src="./src/logo2.png" alt="Our companys logo">
