--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="./src/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">    
     <link rel="stylesheet" href="./css/mobilemed.css">
     <link rel="stylesheet" href="./css/tablet.css">
@@ -33,14 +34,14 @@
         <img src="./src/splash.jpg" alt="some resturant imagery">
         <h1>RIMAS CATERING</h1>
         <p class="ptag">
-          Välkommen till RIMAS Catering - där passion för mat och service går hand i hand. Med en stark förankring i Mellanösterns kök erbjuder vi en autentisk matupplevelse som passar alla evenemang, från födelsedagar och bröllop till företagsluncher och konferenser. Vi kombinerar färska, högkvalitativa ingredienser med innovativa recept för att skapa oförglömliga måltider. Varje evenemang är unikt, och vi strävar efter att skräddarsy varje meny enligt dina önskemål. Upptäck skillnaden med RIMAS Catering idag.
+          Välkommen till Rimas Catering - där passion för mat och service går hand i hand. Med en stark förankring i Mellanösterns kök erbjuder vi en autentisk matupplevelse som passar alla evenemang, från födelsedagar och bröllop till företagsluncher och konferenser. Vi kombinerar färska, högkvalitativa ingredienser med innovativa recept för att skapa oförglömliga måltider. Varje evenemang är unikt, och vi strävar efter att skräddarsy varje meny enligt dina önskemål. Upptäck skillnaden med RIMAS Catering idag.
         </p>
         <p class="ptag-short hidden">
-          Välkommen till RIMAS Catering - där passion för mat och service går hand i hand. Med en stark förankring i Mellanösterns kök erbjuder vi en autentisk matupplevelse som passar alla evenemang.
+          Välkommen till Rimas Catering - där passion för mat och service går hand i hand. Med en stark förankring i Mellanösterns kök erbjuder vi en autentisk matupplevelse som passar alla evenemang.
         </p>
         
         <section>
-          <h2>Varför Välja RIMAS Catering?</h2>
+          <h2>Varför välja Rimas Catering?</h2>
           <p>
             Vid RIMAS Catering strävar vi efter perfektion i varje tallrik. Med en djup rot i Mellanösterns rika kulinariska tradition är vi stolta över att kunna presentera en meny som reflekterar både autenticitet och innovation.
           </p>
