--- a/kontakt.html
+++ b/kontakt.html
@@ -17,10 +17,10 @@
         <a href="./index.html" class="fas fa-home"></a>
     </header>
 
-     <section class="intro">
+    <section class="intro">
         <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
         <h1>Kontakta Oss</h1>
-        <p class="head">Slå oss ett mejl för ett offert!</p>
+        <p class="head">Missa inte chnasen att kontakta oss för en offert!</p>
     </section>
 
 
