--- a/evenemang.html
+++ b/evenemang.html
@@ -23,7 +23,7 @@
     </section>
 
     <div class="container">
-        <img class="kort" src="./src/event1.jpg" alt="">
+        <img class="kort" src="./src/WhatsApp1.jpeg" alt="">
         <div class="text">
             <h4>Bröllop</h4>
             <p class="textp">
@@ -33,7 +33,7 @@
     </div>
 
      <div class="container">
-        <img class="kort" src="./src/event2.jpg" alt="">
+        <img class="kort" src="./src/WhatsApp2.jpeg" alt="">
          <div class="text">
             <h4>Sparbankernas huvudmänsträtt</h4>
             <p class="textp">
