--- a/event.html
+++ b/event.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="kort" src="./src/event1.jpg" alt="">
+        <img class="kort" src="./src/WhatsApp1.jpeg" alt="">
         <div class="text">
             <h4>Bröllop</h4>
             <p>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="container">
-        <img class="kort" src="./src/event2.jpg" alt="">
+        <img class="kort" src="./src/WhatsApp2.jpeg" alt="">
         <div class="text">
             <h4>Sparbankernas huvudmänsträtt</h4>
             <p>
