--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./css/mobilemed.css">
     <link rel="stylesheet" href="./css/tablet.css">
     <link rel="stylesheet" href="./css/desktop.css">
-    <link rel="stylesheet" href="./css/computer.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <!-- <link rel="stylesheet" href="./css/computer.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rimas catering</title>
@@ -77,9 +78,15 @@
       <footer>
         <img src="./src/logo2.png" alt="Our companys logo">
         <p>© 2023 Rimas Catering</p>
-        <a href="https://www.instagram.com/rimas.catering/" target="_blank" class="insta">
+        
+        <a class="tag1" href="https://www.instagram.com/rimas.catering/" target="_blank" class="insta">
           <i class="fab fa-instagram"></i>
         </a>
+
+        <a class="tag2" href="https://www.linkedin.com/company/rimas-catering/about/" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        
       </footer>
     </div>
     <script type="module" src="./main.js"></script>
