--- a/event.html
+++ b/event.html
@@ -10,7 +10,7 @@
         <img class="kort" src="./src/WhatsApp1.jpeg" alt="">
         <div class="text">
             <h4>Bröllop</h4>
-            <p>
+            <p class="textp">
                 Vår magiska bröllopsdag blev en oförglömlig stund, fylld av skratt, kärlek och eviga minnen.
             </p>
         </div>
@@ -20,7 +20,7 @@
         <img class="kort" src="./src/WhatsApp2.jpeg" alt="">
         <div class="text">
             <h4>Sparbankernas huvudmänsträtt</h4>
-            <p>
+            <p class="textp">
                 Vid vårt bank-event bjöd vi på en festmåltid som fick alla att känna sig som en del av vår stora familj.
             </p>
         </div>
