--- a/kontakt.html
+++ b/kontakt.html
@@ -42,6 +42,9 @@
             <label for="event">Event:</label>
             <input id="event" type="text">
 
+            <label for="otherInfo">Andra upplysningar:</label>
+            <textarea id="otherInfo" rows="4" cols="50"></textarea>
+
             <label for="diet">Preferenser:</label>
             <select id="diet" name="diet" class="form__field" required>
                 <option value="vegetarian">Vegetariskt/Vegan</option>
