--- a/gallerie.html
+++ b/gallerie.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/gallerie.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Gallerie</title>
 </head>
 <body>
 
-    <header></header>
+    <header>
+        <a href="./index.html" class="fas fa-home"></a>
+    </header>
 
-    <main></main>
+    <main>
 
-    <footer></footer>
+    </main>
+
+    <footer>
+        <img src="./src/logo2.png" alt="Our companys logo">
+        <p>© 2023 Rimas Catering</p>
+    </footer>
 
     <script src="./main.js"></script>
 
