--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
       </div> -->
 
       <footer>
-        <img src="./src/logo2.png" alt="Our companys logo">
+        <a href="./index.html">
+          <img src="./src/logo2.png" alt="Our companys logo">
+        </a>
         <p>© 2023 Rimas Catering</p>
       </footer>
     </div>
