--- a/evenemang.html
+++ b/evenemang.html
@@ -45,7 +45,9 @@
     <div class="spacer"></div>
 
     <footer>
-        <img src="./src/logo2.png" alt="Our companys logo">
+        <a href="./index.html">
+            <img src="./src/logo2.png" alt="Our companys logo">
+        </a>
         <p>© 2023 Rimas Catering</p>
     </footer>
 
