fixed text area

--- a/kontakt.html
+++ b/kontakt.html
@@ -43,7 +43,7 @@
             <input id="event" type="text">
 
             <label for="otherInfo">Andra upplysningar:</label>
-            <textarea id="otherInfo" rows="4" cols="50"></textarea>
+            <input id="otherInfo" rows="4" cols="50"></input>
 
             <label for="diet">Preferenser:</label>
             <select id="diet" name="diet" class="form__field" required>
