--- a/gallerie.html
+++ b/gallerie.html
@@ -16,17 +16,76 @@
     </header>
 
     <main>
-        <div class="gallery">
-            <img src="https://picsum.photos/id/1028/300/300" alt="a forest after an apocalypse">
-            <img src="https://picsum.photos/id/15/300/300" alt="a waterfall and many rocks">
-            <img src="https://picsum.photos/id/1040/300/300" alt="a house on a mountain">
-            <img src="https://picsum.photos/id/106/300/300" alt="sime pink flowers">
-            <img src="https://picsum.photos/id/136/300/300" alt="big rocks with some trees">
-            <img src="https://picsum.photos/id/1039/300/300" alt="a waterfall, a lot of tree and a great view from the sky">
-            <img src="https://picsum.photos/id/110/300/300" alt="a cool landscape">
-            <img src="https://picsum.photos/id/1047/300/300" alt="inside a town between two big buildings">
-            <img src="https://picsum.photos/id/1057/300/300" alt="a great view of the sea above the mountain">
-        </div>
+        <section class="gallery">
+            <div class="container">
+                <div class="grid">
+                <div class="column-xs-12 column-md-4">
+                    <div class="image-text">
+                        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad molestias sed reiciendis,</h1>
+                    </div>
+                    <figure class="img-container">
+                        <img src="./src/pics/Snapchat-1018020876.jpg" />
+                    </figure>
+
+                </div>
+                <div class="column-xs-12 column-md-4">
+                    <div class="image-text">
+                        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad molestias sed reiciendis,</h1>
+                    </div>
+                    <figure class="img-container">
+                        <img src="./src/pics/Snapchat-1379904647.jpg" />
+                    </figure>
+                </div>
+                 <div class="column-xs-12 column-md-4">
+                    <div class="image-text">
+                        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad molestias sed reiciendis,</h1>
+                    </div>
+                    <figure class="img-container">
+                        <img src="./src/pics/Snapchat-1875270013.jpg" />
+                    </figure>
+                </div>
+                <!--<div class="column-xs-12 column-md-6">
+                    <figure class="img-container">
+                        <img src="./src/shabab1.jpg" />
+                        <figcaption class="img-content">
+                        <h2 class="title">Phone</h2>
+                        <h3 class="category">Showcase</h3>
+                    </figcaption>
+                    <span class="img-content-hover">
+                        <h2 class="title">Phone</h2>
+                        <h3 class="category">Showcase</h3>
+                    </span>
+                    </figure>
+                </div>
+                <div class="column-xs-12 column-md-6">
+                    <figure class="img-container">
+                        <img src="./src/shabab1.jpg" />
+                        <figcaption class="img-content">
+                        <h2 class="title">Keyboard</h2>
+                        <h3 class="category">Showcase</h3>
+                    </figcaption>
+                    <span class="img-content-hover">
+                        <h2 class="title">Keyboard</h2>
+                        <h3 class="category">Showcase</h3>
+                    </span>
+                    </figure>
+                </div>
+                <div class="column-xs-12">
+                    <figure class="img-container">
+                        <img src="./src/shabab1.jpg" />
+                        <figcaption class="img-content">
+                        <h2 class="title">Wrist Watch</h2>
+                        <h3 class="category">Showcase</h3>
+                    </figcaption>
+                    <span class="img-content-hover">
+                        <h2 class="title">Wrist Watch</h2>
+                        <h3 class="category">Showcase</h3>
+                    </span>
+                    </figure>
+                </div> -->
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -36,6 +95,7 @@
         <p>© 2023 Rimas Catering</p>
     </footer>
 
+    <script src="./test.js"></script>
     <script src="./main.js"></script>
 
 </body>
