--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/mainEvent.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://use.fontawesome.com/389659aaa2.js"></script>    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rimas catering</title>
   </head>
   <body>
@@ -66,15 +65,37 @@
 
       <div class="spacer"></div>
 
-      <!-- <div class="links">
-        <a class="tag1" href="https://www.instagram.com/rimas.catering/" target="_blank" class="insta">
-          <i class="fab fa-instagram"></i>
-        </a>
-
-        <a class="tag2" href="https://www.linkedin.com/company/rimas-catering/about/" target="_blank">
-          <i class="fab fa-linkedin"></i>
-        </a>
-      </div> -->
+      <div class="social">
+        <ul>
+            <li>
+              <a class="facebook" href="https://www.facebook.com/people/Rimas-Catering/100089761612546/?sk=about">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <i  aria-hidden="true">F</i>
+              </a>
+            </li>
+            <li>
+              <a class="instagram" href="https://www.instagram.com/rimas.catering/">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <i  aria-hidden="true">I</i>
+              </a>
+            </li>
+            <li>
+              <a class="linkedin" href="https://www.linkedin.com/company/rimas-catering/about/">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <i  aria-hidden="true">L</i>
+              </a>
+            </li>
+        </ul>
+      </div>
 
       <footer>
         <a href="./index.html">
