--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <i  aria-hidden="true">F</i>
+                <i  aria-hidden="true">FB</i>
               </a>
             </li>
             <li>
@@ -82,7 +82,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <i  aria-hidden="true">I</i>
+                <i  aria-hidden="true">IG</i>
               </a>
             </li>
             <li>
@@ -91,7 +91,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <i  aria-hidden="true">L</i>
+                <i  aria-hidden="true">LI</i>
               </a>
             </li>
         </ul>
