--- a/gallerie.html
+++ b/gallerie.html
@@ -26,46 +26,45 @@
         <section class="gallery">
             <div class="container">
                 <h2>BANK 1</h2>
-
                 <div class="grid">
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1018020876.jpg" alt="Image Description" />
+                            <img src="./src/bank1/Snapchat-1286968896.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1320889539.jpg" alt="Image Description" />
+                            <img src="./src/bank1/Snapchat-131331219.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1379904647.jpg" alt="Image Description" />
+                            <img src="./src/bank1/Snapchat-1472304433.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1875270013.jpg" alt="Image Description" />
+                            <img src="./src/bank1/Snapchat-1612248000.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1018020876.jpg" alt="Image Description" />
+                            <img src="./src/bank1/Snapchat-2002425888.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1320889539.jpg" alt="Image Description" />
+                            <img src="./src/bank1/Snapchat-479765623.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1379904647.jpg" alt="Image Description" />
+                            <img src="./src/bank1/shabab2.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1875270013.jpg" alt="Image Description" />
+                            <img src="./src/bank1/event1.jpg" alt="Image Description" />
                         </figure>
                     </div>
                 </div>
@@ -75,32 +74,32 @@
                     
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1018020876.jpg" alt="Image Description" />
+                            <img src="./src/bank2/Snapchat-1593944161.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1320889539.jpg" alt="Image Description" />
+                            <img src="./src/bank2/Snapchat-1648569261.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1379904647.jpg" alt="Image Description" />
+                            <img src="./src/bank2/Snapchat-1834031925.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1875270013.jpg" alt="Image Description" />
+                            <img src="./src/bank2/Snapchat-561986809.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1018020876.jpg" alt="Image Description" />
+                            <img src="./src/bank2/Snapchat-960936268.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1320889539.jpg" alt="Image Description" />
+                            <img src="./src/bank2/Snapchat-979896768.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
@@ -119,42 +118,42 @@
                 <div class="grid">
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1018020876.jpg" alt="Image Description" />
+                            <img src="./src/bröllo/Snapchat-1091268486.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1320889539.jpg" alt="Image Description" />
+                            <img src="./src/bröllo/Snapchat-1268258678.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1379904647.jpg" alt="Image Description" />
+                            <img src="./src/bröllo/Snapchat-1828908435.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1875270013.jpg" alt="Image Description" />
+                            <img src="./src/bröllo/Snapchat-245149914.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1018020876.jpg" alt="Image Description" />
+                            <img src="./src/bröllo/Snapchat-296785772.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1320889539.jpg" alt="Image Description" />
+                            <img src="./src/bröllo/Snapchat-716755302.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1379904647.jpg" alt="Image Description" />
+                            <img src="./src/bröllo/1.jpg" alt="Image Description" />
                         </figure>
                     </div>
                     <div class="column">
                         <figure class="img-container">
-                            <img src="./src/pics/Snapchat-1875270013.jpg" alt="Image Description" />
+                            <img src="./src/bröllo/2.jpg" alt="Image Description" />
                         </figure>
                     </div>
                 </div>
